# AI_prog

./: .coverage.MacbookAir_di_Davide.2102.XqAivWzx  .gitignore  Dockerfile  Makefile  README.md  pyproject.toml  requirements.txt
.github/workflows/: deploy.yml
src/: eda.py  model_training.py
tests/: test_eda.py  test_model.py
