[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "emotion-classifier"
version = "0.1.0"
description = "Classificatore di emozioni basato su DistilBERT"
readme = "README.md"
authors = [
    {name = "Davide", email = "sigurtadavide@gmail.com"}
]
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
requires-python = ">=3.9"
dependencies = [
    "datasets",
    "transformers",
    "torch",
    "pandas",
    "matplotlib",
    "seaborn", 
    "scikit-learn",
    "tqdm",
    "accelerate>=0.26.0",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "pylint",
    "build",
]

[project.urls]
"Homepage" = "https://github.com/DavideSigurta/AI_prog"
